--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Poster2</title>
-    <link rel="stylesheet" href="Poster2.css">
+    <link rel="stylesheet" href="./style/Poster2.css">
 </head>
 <body>
     <div class="poster2-page">
